<?xml version="1.0"?>
<package format="2">
  <name>recon_controllers</name>
  <version>1.0.0</version>
  <description>recon_controllers provides controllers for REcycle CONveyor belt project</description>
  <maintainer email="tin.tran1@monash.edu">Tin Tran</maintainer>
  <license>BSD</license>
  <author>Tin Tran</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>ros_package</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/recon_controllers_plugin.xml"/>
  </export>
</package>
